--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,8 @@
     "esModuleInterop": true,
     "lib": ["ESNext", "DOM"],
     "skipLibCheck": true,
-    "noEmit": true
+    "noEmit": true,
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue","components.d.ts"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue","src/components.d.ts","src/auto-imports.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
