--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@vue/babel-helper-vue-jsx-merge-props": "^1.4.0",
     "@vue/babel-preset-jsx": "^1.4.0",
     "ant-design-vue": "^3.2.17",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.34",
+    "three": "^0.151.3",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@iconify/json": "^2.2.49",
+    "@types/three": "^0.150.1",
     "@vitejs/plugin-vue": "^4.1.0",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue/runtime-core": "^3.2.47",
