--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^19.0.0",
+    "@types/lodash": "^4.14.194",
     "@vue/babel-helper-vue-jsx-merge-props": "^1.4.0",
     "@vue/babel-preset-jsx": "^1.4.0",
     "ant-design-vue": "^3.2.17",
@@ -21,6 +23,7 @@
   "devDependencies": {
     "@iconify/json": "^2.2.49",
     "@types/three": "^0.150.1",
+    "@types/tween.js": "^18.6.1",
     "@vitejs/plugin-vue": "^4.1.0",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue/runtime-core": "^3.2.47",
