--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install",
+    "lint": "eslint"
   },
   "dependencies": {
+    "@eslint/create-config": "0.4.2",
     "@tweenjs/tween.js": "^19.0.0",
     "@types/lodash": "^4.14.194",
     "@vue/babel-helper-vue-jsx-merge-props": "^1.4.0",
@@ -21,16 +24,26 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.6.1",
+    "@commitlint/config-conventional": "^17.6.1",
     "@iconify/json": "^2.2.49",
     "@types/three": "^0.150.1",
     "@types/tween.js": "^18.6.1",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@vitejs/plugin-vue": "^4.1.0",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue/runtime-core": "^3.2.47",
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.38.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-vue": "^9.11.0",
+    "husky": "^8.0.3",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1",
-    "typescript": "^4.9.3",
+    "typescript": "^4.9.5",
     "unplugin-auto-import": "^0.15.2",
     "unplugin-icons": "^0.16.1",
     "unplugin-vue-components": "^0.24.1",
