--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vue/babel-helper-vue-jsx-merge-props": "^1.4.0",
     "@vue/babel-preset-jsx": "^1.4.0",
     "ant-design-vue": "^3.2.17",
+    "axios": "^1.4.0",
     "lodash": "^4.17.21",
     "pinia": "^2.0.34",
     "three": "^0.151.3",
