--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "eslint-plugin-vue": "^9.11.0",
     "husky": "^8.0.3",
     "postcss": "^8.4.21",
+    "sass": "^1.63.3",
+    "scss": "^0.2.4",
     "tailwindcss": "^3.3.1",
     "typescript": "^4.9.5",
     "unplugin-auto-import": "^0.15.2",
