--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
     "skipLibCheck": true,
     "noEmit": true,
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue","src/components.d.ts","src/auto-imports.d.ts"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue","src/*.vue","src/components.d.ts","src/auto-imports.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
