--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@eslint/create-config": "0.4.2",
     "@tweenjs/tween.js": "^19.0.0",
+    "@types/dexie": "^1.3.1",
     "@types/lodash": "^4.14.194",
     "@vue/babel-helper-vue-jsx-merge-props": "^1.4.0",
     "@vue/babel-preset-jsx": "^1.4.0",
